--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -15,8 +15,8 @@ python3 -m bash_kernel.install
 
 2、在主服务器上安装，步骤为：
 1）增加注册帐号linuxer
-useradd -s /opt/linuxer/bin/server.bash linuxer
-useradd -G sudo -s /opt/linuxer/bin/server-teacher.bash teacher
+useradd -m -s /opt/linuxer/bin/server.bash linuxer
+useradd -m -G sudo -s /opt/linuxer/bin/server-teachers.bash teacher
 2）设置密码为linux
 passwd linuxer
 passwd teacher
